src/objects/Service_Catalog_Award__c.object
<CustomObject>
    <fields>
        <fullName>Awards__c</fullName>
        <label>Awards/Commendations</label>
        <referenceTo>Awards_Commendations__c</referenceTo>
        <relationshipName>Service_Catalog_Awards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Catalog_Entry_Column__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Catalog_Entry__r.Id,  Catalog_Entry__r.Name, &quot;_self&quot;)</formula>
        <label>Catalog Entry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_Entry__c</fullName>
        <label>Service Catalog Entry</label>
        <referenceTo>Service_Catalog_Entry__c</referenceTo>
        <relationshipLabel>Capability Awards</relationshipLabel>
        <relationshipName>Service_Catalog_Awards</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Capability Award</label>
    <nameField>
        <displayFormat>Aw-{0}</displayFormat>
        <label>Service Catalog Award Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capability Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>